syntax = "proto3";

package IntelliSwing;

message Point2i
{
	int32 x	= 1;
	int32 y	= 2;
}

message Point2f
{
	float x	= 1;
	float y	= 2;
}

message Point3i
{
	int32 x	= 1;
	int32 y	= 2;
	int32 z	= 3;
}

message Point3f
{
	float x	= 1;
	float y	= 2;
	float z	= 3;
}

message ReturnMsg 
{
  bool isOK			= 1;
  int32 errorCode	= 2;
  string errorDesc	= 3;
}